infra/k3s/applications/gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: app
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: gateway
