infra/k3s/applications/gateway/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway
  namespace: app
spec:
  hosts:
    - api.gaegaeting.app
  gateways:
    - istio-system/api-gateway
  http:
    - match:
        - uri:
            prefix: /gateway
      route:
        - destination:
            host: gateway.app.svc.cluster.local
            port:
              number: 4000
